<resources>
    <string name="app_name">dstn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="racquet_total"> </string>
    <string name="profit_total"> </string>
    <string name="client_total"> </string>
    <string name="profit_total_label">profit</string>
    <string name="racquet_total_label">racquets</string>
    <string name="client_total_label">clients</string>
    <string name="what">what</string>
    <string name="stringing_hub">Stringing Hub</string>
    <string name="add_racquet">Add Racquet</string>
    <string name="client_name">Client Name</string>
    <string name="string_brand">String Brand</string>
    <string name="pick_date">Select Date</string>
    <string name="string_type">String Type</string>
    <string name="tension">Tension</string>
    <string name="quantity">Quantity</string>
    <string name="notes">Notes</string>
    <string name="discard">DISCARD</string>
    <string name="save">SAVE</string>
    <string name="lb">lb</string>
    <string name="kg">kg</string>
    <string name="edit_racquet">Edit Racquet</string>
    <string name="custom_date">Custom Date</string>
    <string name="dstn">dstn</string>
    <string name="search_hint">Search clients</string>
    <string name="search_title">Repeat Order</string>
    <string name="export">Export</string>
    <string name="action_export">Export to PDF</string>
</resources>